package eapli.aisafe.flight.domain;

public enum FlightType {
    REGULAR,
    CHARTER
}
